# Applire

./: .env.ci  .env.dev.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CI_CD_GUIDE.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  PROJECT.md  README.md  SECURITY.md  TESTING.md  claude.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.pq.ts  playwright.config.ts  requirements-dev.txt  tsconfig.json
backend/: .coveragerc  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  0002_job_analyses.py  0003_master_profiles.py  0004_gap_analyses.py  0005_interview_sessions.py  0006_generated_cvs.py  0007_job_analyses_source_url.py  0008_generated_cvs_template.py  0009_uploads.py  0010_gap_categories.py  0011_interview_sessions_iter14.py  0012_create_flow_sessions.py  0013_iter17_foundation.py  0014_flow_sessions_nullable_job_id.py  0015_add_cv_section_editor_columns.py  0016_embedding_vectors.py  0016_photo_consent.py  0017_gap_embedding_score.py  0018_berufsbild_taxonomy.py  0019_photo_consent.py  0020_add_color_profiles.py  0020_color_schemes.py  0021_color_schemes.py  0022_rename_color_tables.py  0023_add_generated_cover_letters_table.py  0024_add_flow_session_cover_letter_fk.py  0025_user_settings_ui_language.py  (+3 more)
backend/apliqa/: config.py  constants.py  main.py
backend/applire/: __init__.py  config.py  constants.py  exceptions.py  main.py
backend/tests/: conftest.py
(+612 files in other folders)
